[gd_scene load_steps=4 format=3 uid="uid://ct5qrj8cju4wf"]

[ext_resource type="Script" path="res://Scenes/Menus/title_screen.gd" id="1_uxwna"]
[ext_resource type="Texture2D" uid="uid://c07pgvoxd48t6" path="res://Scenes/Menus/I Guess We Doin Circles Now-Photoroom.png" id="2_xkscj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05dc2"]
bg_color = Color(0.95158, 0.95158, 0.95158, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_uxwna")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.310617, 0.310617, 0.310617, 1)

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -216.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_xkscj")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.833
anchor_right = 0.5
anchor_bottom = 0.833
offset_left = -100.0
offset_top = -65.7841
offset_right = 100.0
offset_bottom = 42.2159
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 16

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = SubResource("StyleBoxFlat_05dc2")
text = "Start"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = SubResource("StyleBoxFlat_05dc2")
text = "Quit
"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
